--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sn-rme",
-  "version": "0.19.0",
-  "homepage": ".",
+  "name": "flowstate",
+  "version": "1.0.0",
+  "homepage": "https://flowstate.co.il/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -45,5 +45,6 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "engineStrict": true
 }
