--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "filesafe-embed": "^1.0.10",
     "filesafe-js": "^1.0.4",
-    "flowstate-editor-temp-2": "^1.0.5",
+    "flowstate-editor": "^1.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^5.0.0",
