--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^5.0.1",
+    "react-timer-hook": "^3.0.5",
     "react-twitter-embed": "^4.0.4",
     "sass": "^1.54.0",
     "sn-components-api": "^1.2.8",
