--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.4.2",
     "flowstate-editor": "^1.0.14",
+    "next": "^12.2.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^5.0.1",
@@ -18,9 +19,15 @@
     "sn-stylekit": "^2.2.1",
     "styled-components": "^5.3.5"
   },
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "prettify": "prettier --write .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,8 +48,5 @@
   },
   "sn": {
     "main": "build/index.html"
-  },
-  "engines": {
-    "node": ">=16.0.0"
   }
 }
