--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          command: "squash and merge"
+          command: 'squash and merge'
           target: minor
