--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^14.4.2",
+		"cookie": "^0.5.0",
+		"dotenv": "^16.0.2",
 		"flowstate-editor": "^1.0.14",
 		"next": "^12.2.5",
 		"prop-types": "^15.8.1",
