--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"cookie": "^0.5.0",
 		"dotenv": "^16.0.2",
 		"flowstate-editor": "^1.0.14",
+		"mongoose": "^6.6.3",
 		"next": "^12.2.5",
 		"prop-types": "^15.8.1",
 		"react": "^16.14.0",
