--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.4.2",
+    "docx": "^7.8.0",
+    "file-saver": "^2.0.5",
     "flowstate-editor": "^1.0.14",
+    "mongodb": "^4.13.0",
+    "nanoid": "3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-timer-hook": "^3.0.5",
     "react-twitter-embed": "^4.0.4",
